--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.0</TargetFramework>
+    <RuntimeIdentifiers>ubuntu.16.04-x64;win10-x64;osx.10.10-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
