--- a/CheckLinksConsole/checksettings.json
+++ b/CheckLinksConsole/checksettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "LinkChecker": "Trace",
+      "CheckLinksConsole":  "Debug" 
     }
   }
 }
