--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -22,5 +22,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.0.1-dev-00008" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0" />
   </ItemGroup>
 </Project>
