--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -23,5 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.0.1-dev-00008" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="7.0.6-IR31" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.0" />
   </ItemGroup>
 </Project>
