--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -25,5 +25,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="7.0.6-IR31" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
   </ItemGroup>
 </Project>
