--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -26,5 +26,6 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="7.0.6-IR31" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="1.1.0" />
   </ItemGroup>
 </Project>
