DI on LinksDb - not really worth it IMO

--- a/CheckLinksConsole/checksettings.json
+++ b/CheckLinksConsole/checksettings.json
@@ -4,7 +4,8 @@
     "LogLevel": {
       "Default": "Information",
       "LinkChecker": "Trace",
-      "CheckLinksConsole":  "Debug" 
+      "CheckLinksConsole": "Debug",
+      "Microsoft": "Warning"  
     }
   }
 }
