--- a/CheckLinksConsole/CheckLinksConsole.csproj
+++ b/CheckLinksConsole/CheckLinksConsole.csproj
@@ -28,5 +28,6 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.0.3" />
   </ItemGroup>
 </Project>
